--- a/index.html
+++ b/index.html
@@ -5,8 +5,57 @@
   <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Bitter:bold|Roboto:bold" media="all">
 </head>
 <body>
+  <p id="verse"></p>
+  <a href="#" id="ref"></a>
+  <footer>
+    <select name="version" id="version">
+      <option value="45">Amplified Bible</option>
+      <option value="8">American Standard Version</option>
+      <option value="105">Common English Bible</option>
+      <option value="46">Contemporary English Version</option>
+      <option value="195">Complete Jewish Bible</option>
+      <option value="16">Darby Translation</option>
+      <option value="63">Douay-Rheims 1899 American Edition</option>
+      <option value="173">Easy-to-Read Version</option>
+      <option value="47">English Standard Version</option>
+      <option value="166">English Standard Version Anglicised</option>
+      <option value="233">Expanded Bible</option>
+      <option value="86">Good News Translation</option>
+      <option value="236">1599 Geneva Bible</option>
+      <option value="158">GOD’S WORD Translation</option>
+      <option value="77">Holman Christian Standard Bible</option>
+      <option value="48">21st Century King James Version</option>
+      <option value="9">King James Version</option>
+      <option value="231">Knox Bible</option>
+      <option value="165">Lexham English Bible</option>
+      <option value="217">Mounce Reverse-Interlinear New Testament</option>
+      <option value="65">The Message</option>
+      <option value="49">New American Standard Bible</option>
+      <option value="78">New Century Version</option>
+      <option value="234">New English Translation</option>
+      <option value="76">New International Reader's Version</option>
+      <option value="31">New International Version</option>
+      <option value="64">New International Version - UK</option>
+      <option value="50">New King James Version</option>
+      <option value="51">New Living Translation</option>
+      <option value="74">New Life Version</option>
+      <option value="239">Names of God Bible</option>
+      <option value="210">New Revised Standard Version</option>
+      <option value="211">New Revised Standard Version, Anglicised</option>
+      <option value="213">New Revised Standard Version, Anglicised Catholic Edition</option>
+      <option value="212">New Revised Standard Version Catholic Edition</option>
+      <option value="228">Orthodox Jewish Bible</option>
+      <option value="164">J.B. Phillips New Testament</option>
+      <option value="214">Revised Standard Version</option>
+      <option value="215">Revised Standard Version Catholic Edition</option>
+      <option value="237">The Voice</option>
+      <option value="73">Worldwide English (New Testament)</option>
+      <option value="235">World English Bible</option>
+      <option value="53">Wycliffe Bible</option>
+      <option value="15">Young's Literal Translation</option>
+    </select>
+    <p id="credit">Powered by <a href="http://www.biblegateway.com/">BibleGateway.com</a></p>
+  </footer>
   <script type="text/javascript" src="script.js"></script>
-  <script type="text/javascript" src="https://www.biblegateway.com/votd/get?format=json&version=ESV&callback=write"></script>
-  <div class="credit">Powered by <a href="http://www.biblegateway.com/">BibleGateway.com</a></div>
 </body>
 </html>
