--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
 <head>
   <title>DailyVerse</title>
   <link rel="stylesheet" type="text/css" href="style.css" media="all">
-  <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Bitter:bold|Roboto:bold" media="all">
+  <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Bitter:bold|Montserrat" media="all">
 </head>
 <body>
-  <p id="verse"></p>
-  <a href="#" id="ref"></a>
+  <div class="content">
+    <p id="verse"></p>
+    <a href="#" id="ref"></a>
+  </div>
   <footer>
     <select name="version" id="version">
       <option value="45">Amplified Bible</option>
@@ -54,7 +56,7 @@
       <option value="53">Wycliffe Bible</option>
       <option value="15">Young's Literal Translation</option>
     </select>
-    <p id="credit">Powered by <a href="http://www.biblegateway.com/">BibleGateway.com</a></p>
+    <p id="credit">Powered by <a href="http://www.biblegateway.com/">Bible Gateway</a></p>
   </footer>
   <script type="text/javascript" src="script.js"></script>
 </body>
