--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
 <head>
-  <title>DailyVerse</title>
-  <link rel="stylesheet" type="text/css" href="style.css" media="all">
-  <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Bitter:bold|Montserrat" media="all">
+  <title>New Tab</title>
+  <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Montserrat|Source+Serif+Pro:600">
 </head>
 <body>
   <div class="content">
