--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <option value="53">Wycliffe Bible</option>
       <option value="15">Young's Literal Translation</option>
     </select>
-    <p id="credit">Powered by <a href="http://www.biblegateway.com/">Bible Gateway</a></p>
+    <p><a href="http://www.biblegateway.com/" id="credit">Powered by Bible Gateway</a></p>
   </footer>
   <script type="text/javascript" src="script.js"></script>
 </body>
